# machine-learning_example-project

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_dataset.py
data/: dataset.py
documentation/: Deepnote Setup.md  Session 1.pptx  Session 2.pptx  Session 3.pptx
evaluation/: evaluation_metrics.py  grid_search.py  multi_run_evaluation.py
evaluation/experiment_records/: Model Selection - ANN - Experiment.xlsx  Model Selection - CNN - Experiment.xlsx  grid_search_results.pickle
helpers/: models.py
models/: CNN_Builder.py  Majority_Guessing_Benchmark.py  Random_Guessing_Benchmark.py  cbb_builder.py  model_persistence.py
models/snapshots/DTC_Depth10_V_1/: DTC_Depth10_v_1.pkl
models/snapshots/Pokemon_CNN_V_1/: Pokemon_CNN_v_1.h5
notebooks/: data_exploration.ipynb  data_preparation.ipynb  evaluation.ipynb  hyper_parameter_selection.ipynb  manual_model_selection.ipynb  model_selection.ipynb  overfitting_experimentation.ipynb
scripts/: hyper_parameter_selection.py
tests/: test_cnn_builder.py  test_dataset.py  test_evaluation_metrics.py  test_grid_search.py  test_majority_guessing.py  test_model_versioning.py  test_multi_run_evaluation.py  test_random_guessing.py
